# mdev-cli

./: Cargo.toml  Makefile  README.md
src/: app_detector.rs  device_manager.rs  logger.rs  main.rs  models.rs  runner.rs
src/commands/: clear.rs  completions.rs  doctor.rs  emulator.rs  keystore.rs  mod.rs  purge.rs  uninstall.rs
